@@ -1,5 +1,12 @@
 2008-12-11  Bastien Nocera  <hadess@hadess.net>
 
+	* browser-plugin/Makefile.am:
+	* src/Makefile.am:
+	* src/backend/Makefile.am: Remove NVTV_{LIBS,CFLAGS} from
+	the makefiles
+
+2008-12-11  Bastien Nocera  <hadess@hadess.net>
+
 	* src/totem.c (totem_callback_connect): Fix the scrollwheel
 	not working on the fullscreen seekbar (Closes: #563894)
 
